Fixed adding empty string ingredients , changed user for the recipe to string and added predefined user ids, added StaticRandom class for random numbers, removed some comments

--- a/VkusotiikiCrawler/VkusotiikiCrawler.csproj
+++ b/VkusotiikiCrawler/VkusotiikiCrawler.csproj
@@ -97,6 +97,7 @@
     <Compile Include="RecipeWebsites\ReceptiteBg.cs" />
     <Compile Include="RecipeData\Recipe.cs" />
     <Compile Include="Utilities\RecipesFixer.cs" />
+    <Compile Include="Utilities\StaticRandom.cs" />
     <Compile Include="Utilities\VkusotiikiCrawler.cs" />
   </ItemGroup>
   <ItemGroup>
